# FastApiTest1

./: pyproject.toml  sql_app.db
app/: crud.py  database.py  main.py  models.py  schemas.py
migrations/: env.py
migrations/versions/: f1143c439244_initial_migration.py
